add login google and env variable